fix margins on mobile display

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,16 +22,18 @@ body {
 
 main, .main-content, #root {
   width: 100%;
-  max-width: 430px; /* Un poco más que el iPhone 12 para margen */
+  max-width: 430px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 @media (max-width: 430px) {
-  main, .main-content, #root {
+  main, .main-content, #root, body {
     width: 100%;
     padding: 0;
+    margin: 0;
+    max-width: 100%;
   }
   
 }
